--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -49,6 +49,7 @@ a {
 #mainNav {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin-bottom: 0;
+  opacity: 0.8;
   text-transform: uppercase;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   background-color: black; }
@@ -58,7 +59,9 @@ a {
     color: white;
     border: 1px solid white; }
   #mainNav .navbar-brand {
-    font-weight: 700; }
+    font-weight: 500;
+    font-style: normal;
+    margin-left: -70px; }
   #mainNav a {
     color: white; }
   #mainNav .navbar-nav .nav-item {
@@ -99,13 +102,13 @@ a {
   height: auto;
   padding: 200px 0;
   text-align: center;
-  color: white;
-  background: url("../img/pre_waza-main.jpg") no-repeat bottom center scroll;
+  color: black;
+  background: url("../img/stocks/7X4A9529_vogue vision studio.jpg") no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; }
+  background-size: auto auto; }
   .masthead .intro-body {
     display: table-cell;
     vertical-align: middle; }
@@ -118,9 +121,13 @@ a {
       height: 100%;
       padding: 0; }
       .masthead .intro-body .brand-heading {
-        font-size: 100px; }
+        font-size: 100px;
+        color: black;
+        opacity: 0.7; }
       .masthead .intro-body .intro-text {
-        font-size: 22px; } }
+        font-size: 30px;
+        color: black;
+        opacity: 0.7; } }
 
 .btn-circle {
   font-size: 26px;
@@ -145,9 +152,10 @@ a {
   padding-bottom: 150px; }
 
 .download-section {
-  color: white;
-  background: url("../img/stocks/the-kura_list.jpg") no-repeat center center scroll;
+  color: black;
+  background: url("../img/pre_waza-main.jpg") no-repeat center center scroll;
   background-color: black;
+  opacity: 1;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -159,8 +167,8 @@ a {
 
 @media (min-width: 992px) {
   .content-section {
-    padding-top: 200px;
-    padding-bottom: 200px; }
+    padding-top: 100px;
+    padding-bottom: 100px; }
   #map {
     height: 350px; } }
 
@@ -174,14 +182,24 @@ a {
   border-radius: 0; }
 
 .btn-default {
-  color: #ddd8d2;
-  border: 1px solid #ddd8d2;
+  color: black;
+  border: 1px solid black;
   background-color: transparent; }
   .btn-default:focus, .btn-default:hover {
-    color: black;
-    border: 1px solid #ddd8d2;
+    color: red;
+    border: 1px solid red;
     outline: none;
-    background-color: #ddd8d2; }
+    background-color: none; }
+
+.btn-social {
+  color: white;
+  border: 1px solid white;
+  background-color: transparent; }
+  .btn-social:focus, .btn-social:hover {
+    color: red;
+    border: 1px solid red;
+    outline: none;
+    background-color: none; }
 
 ul.banner-social-buttons {
   margin-top: 0; }
