--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -63,7 +63,7 @@ a {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
   margin-bottom: 0;
-
+  opacity: 0.8;
   text-transform: uppercase;
 
   border-bottom: 1px solid fade-out(white, .7);
@@ -77,7 +77,11 @@ a {
     border: 1px solid white;
   }
   .navbar-brand {
-    font-weight: 700;
+    font-weight: 500;
+    font-style: normal;
+    margin-left: -70px;
+
+
   }
   a {
     color: white;
@@ -136,13 +140,14 @@ a {
 
   text-align: center;
 
-  color: white;
-  background: url('../img/pre_waza-main.jpg') no-repeat bottom center scroll;
+  color: black;
+
+  background: url('../img/stocks/7X4A9529_vogue vision studio.jpg') no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: auto auto;
   .intro-body {
     display: table-cell;
 
@@ -152,6 +157,7 @@ a {
     }
     .intro-text {
       font-size: 18px;
+
     }
   }
   @media(min-width:768px) {
@@ -160,9 +166,13 @@ a {
     .intro-body {
       .brand-heading {
         font-size: 100px;
+        color:black;
+        opacity: 0.7;
       }
       .intro-text {
-        font-size: 22px;
+        font-size: 30px;
+        color:black;
+        opacity: 0.7;
       }
     }
   }
@@ -198,9 +208,10 @@ a {
 }
 
 .download-section {
-  color: white;
-  background: url('../img/stocks/the-kura_list.jpg') no-repeat center center scroll;
+  color: black;
+  background: url('../img/pre_waza-main.jpg') no-repeat center center scroll;
   background-color: black;
+  opacity: 1;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -213,8 +224,8 @@ a {
 }
 @media(min-width:992px) {
   .content-section {
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
   #map {
     height: 350px;
@@ -234,15 +245,28 @@ a {
 }
 
 .btn-default {
-  color: $primary;
-  border: 1px solid $primary;
+  color: black;
+  border: 1px solid black;
   background-color: transparent;
   &:focus,
   &:hover {
-    color: black;
-    border: 1px solid $primary;
+    color: red;
+    border: 1px solid red;
     outline: none;
-    background-color: $primary;
+    background-color: none;
+  }
+}
+
+.btn-social {
+  color: white;
+  border: 1px solid white;
+  background-color: transparent;
+  &:focus,
+  &:hover {
+    color: red;
+    border: 1px solid red;
+    outline: none;
+    background-color: none;
   }
 }
 
