--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -16,7 +16,14 @@ html {
   height: 100%; }
 
 h1,
-h2,
+h2 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  margin: 0 0 35px;
+  letter-spacing: 1px;
+  text-transform: uppercase; }
+
+
 h3,
 h4,
 h5,
@@ -28,6 +35,7 @@ h6 {
   text-transform: uppercase; }
 
 p {
+  font-family: 'Playfair Display', serif;
   font-size: 16px;
   line-height: 1.5;
   margin: 0 0 25px; }
@@ -215,10 +223,13 @@ ul.banner-social-buttons {
         margin-bottom: 0; } }
 
 footer {
-  padding: 50px 0; }
+  padding: 18px 0;
+  opacity: 1;
+  background-color: white; }
   footer p {
     font-size: 14px;
-    margin: 0; }
+    margin: 0;
+    color: black; }
 
 ::-moz-selection {
   background: #fcfcfc;
