--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -18,7 +18,15 @@ html {
 }
 
 h1,
-h2,
+h2 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+
+  margin: 0 0 35px;
+
+  letter-spacing: 1px;
+  text-transform: uppercase;
+},
 h3,
 h4,
 h5,
@@ -33,6 +41,7 @@ h6 {
 }
 
 p {
+  font-family: 'Playfair Display', serif;
   font-size: 16px;
   line-height: 1.5;
 
@@ -289,11 +298,14 @@ ul.banner-social-buttons {
 }
 
 footer {
-  padding: 50px 0;
+  padding: 18px 0;
+  opacity:1;
+  background-color: white;
+
   p {
     font-size: 14px;
-
     margin: 0;
+    color:black;
   }
 }
 
