--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -111,17 +111,18 @@ a {
   padding: 200px 0;
   text-align: center;
   color: black;
-  background: url("../img/stocks/7X4A9529_vogue vision studio.jpg") no-repeat center center scroll;
+  background: url("../img/stocks/the-kura_list.jpg") no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: auto auto; }
+  background-size: cover auto; }
   .masthead .intro-body {
-    display: table-cell;
+    display: flex;
     vertical-align: middle; }
     .masthead .intro-body .brand-heading {
-      font-size: 50px; }
+      font-size: 70px;
+      margin-top: 25px; }
     .masthead .intro-body .intro-text {
       font-size: 18px; }
   @media (min-width: 768px) {
@@ -131,17 +132,17 @@ a {
       .masthead .intro-body .brand-heading {
         font-size: 100px;
         color: black;
-        opacity: 0.7; }
+        opacity: 1; }
       .masthead .intro-body .intro-text {
         font-size: 30px;
         color: black;
         opacity: 0.7; } }
 
-.btn-circle {
+.btn-circle-masthead {
   font-size: 26px;
   width: 55px;
   height: 55px;
-  margin-top: 15px;
+  margin-top: 400px;
   line-height: 38px;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
@@ -150,13 +151,31 @@ a {
   border: 2px solid white;
   border-radius: 100% !important;
   background: transparent; }
-  .btn-circle:focus, .btn-circle:hover {
+  .btn-circle-masthead:focus, .btn-circle-masthead:hover {
+    color: white;
+    outline: none;
+    background: rgba(255, 255, 255, 0.1); }
+
+.btn-circle-about {
+  font-size: 26px;
+  width: 55px;
+  height: 55px;
+  margin-top: 50px;
+  line-height: 38px;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background 0.3s ease-in-out;
+  color: white;
+  border: 2px solid white;
+  border-radius: 100% !important;
+  background: transparent; }
+  .btn-circle-about:focus, .btn-circle-about:hover {
     color: white;
     outline: none;
     background: rgba(255, 255, 255, 0.1); }
 
 .content-section {
-  padding-top: 150px;
+  padding-top: 100px;
   padding-bottom: 150px; }
 
 .download-section {
@@ -167,7 +186,7 @@ a {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; }
+  background-size: cover contain; }
 
 #map {
   width: 100%;
