--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -151,18 +151,20 @@ a {
 
   color: black;
 
-  background: url('../img/stocks/7X4A9529_vogue vision studio.jpg') no-repeat center center scroll;
+  background: url('../img/stocks/the-kura_list.jpg') no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: auto auto;
+  background-size: cover auto;
+
   .intro-body {
-    display: table-cell;
+    display: flex;
 
     vertical-align: middle;
     .brand-heading {
-      font-size: 50px;
+      font-size: 70px;
+      margin-top: 25px;
     }
     .intro-text {
       font-size: 18px;
@@ -176,7 +178,7 @@ a {
       .brand-heading {
         font-size: 100px;
         color:black;
-        opacity: 0.7;
+        opacity: 1;
       }
       .intro-text {
         font-size: 30px;
@@ -187,12 +189,12 @@ a {
   }
 }
 
-.btn-circle {
+.btn-circle-masthead {
   font-size: 26px;
 
   width: 55px;
   height: 55px;
-  margin-top: 15px;
+  margin-top: 400px;
   line-height: 38px;
 
   -webkit-transition: background 0.3s ease-in-out;
@@ -211,8 +213,32 @@ a {
   }
 }
 
+.btn-circle-about {
+    font-size: 26px;
+
+    width: 55px;
+    height: 55px;
+    margin-top: 50px;
+    line-height: 38px;
+
+    -webkit-transition: background 0.3s ease-in-out;
+    -moz-transition: background 0.3s ease-in-out;
+    transition: background 0.3s ease-in-out;
+
+    color: white;
+    border: 2px solid white;
+    border-radius: 100% !important;
+    background: transparent;
+    &:focus,
+    &:hover {
+      color: white;
+      outline: none;
+      background: fade-out(white, .9);
+    }
+}
+
 .content-section {
-  padding-top: 150px;
+  padding-top: 100px;
   padding-bottom: 150px;
 }
 
@@ -224,7 +250,7 @@ a {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: cover contain;
 }
 
 #map {
