--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -38,6 +38,7 @@ p {
   font-family: 'Playfair Display', serif;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.5px;
   margin: 0 0 25px; }
   @media (min-width: 768px) {
     p {
