--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -112,7 +112,7 @@ a {
   padding: 200px 0;
   text-align: center;
   color: black;
-  background: url("../img/stocks/bottlescut.jpg") no-repeat center center scroll;
+  background: url("../img/stocks/MastHead.jpg") no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
