--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -152,7 +152,7 @@ a {
 
   color: black;
 
-  background: url('../img/stocks/bottlescut.jpg') no-repeat center center scroll;
+  background: url('../img/stocks/MastHead.jpg') no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover ;
   -moz-background-size: cover ;
