--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
   height: 100%;
   color: white;
-  background-color: black; }
+  background-color: transparent; }
 
 html {
   width: 100%;
@@ -24,7 +24,14 @@ h2 {
   text-transform: uppercase; }
 
 
-h3,
+h3 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  margin: 0 0 35px;
+  letter-spacing: 1px;
+  text-transform: uppercase; }
+
+
 h4,
 h5,
 h6 {
@@ -57,33 +64,33 @@ a {
 
 #mainNav {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  margin-bottom: 0;
-  opacity: 0.8;
-  text-transform: uppercase;
+  margin-bottom: 10px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  background-color: black; }
+  background-color: white; }
   #mainNav .navbar-toggler {
     font-size: 14px;
     padding: 11px;
-    color: white;
-    border: 1px solid white; }
+    color: black;
+    border: 1px solid black; }
   #mainNav .navbar-brand {
     font-weight: 500;
     font-style: normal;
-    margin-left: 0px; }
+    position: relative; }
   #mainNav a {
-    color: white; }
-  #mainNav .navbar-nav .nav-item {
-    -webkit-transition: background 0.3s ease-in-out;
-    -moz-transition: background 0.3s ease-in-out;
-    transition: background 0.3s ease-in-out; }
-    #mainNav .navbar-nav .nav-item:hover {
-      color: fade(white, 80%);
-      outline: none;
-      background-color: transparent; }
-    #mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
-      outline: none;
-      background-color: transparent; }
+    color: black; }
+  #mainNav .navbar-nav {
+    padding-bottom: 5px; }
+    #mainNav .navbar-nav .nav-item {
+      -webkit-transition: background 0.3s ease-in-out;
+      -moz-transition: background 0.3s ease-in-out;
+      transition: background 0.3s ease-in-out; }
+      #mainNav .navbar-nav .nav-item:hover {
+        color: fade(white, 80%);
+        outline: none;
+        background-color: transparent; }
+      #mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
+        outline: none;
+        background-color: transparent; }
   @media (min-width: 992px) {
     #mainNav {
       padding-top: 20px;
@@ -97,8 +104,8 @@ a {
       #mainNav.navbar-shrink {
         padding-top: 10px;
         padding-bottom: 10px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-        background: black; }
+        border-bottom: 1px solid transparent;
+        background-color: white; }
       #mainNav .nav-link.active {
         outline: none;
         background-color: rgba(255, 255, 255, 0.3); }
@@ -106,33 +113,37 @@ a {
           color: white; } }
 
 .masthead {
-  display: table;
+  display: flex;
   width: 100%;
   height: auto;
-  padding: 200px 0;
-  text-align: center;
+  margin-top: 50px;
+  padding-top: 10px;
+  margin-bottom: 30px;
   color: black;
-  background: url("../img/stocks/MastHead.jpg") no-repeat center center scroll;
-  background-color: black;
+  background: url("../img/MastHead.jpg") no-repeat center center scroll;
+  background-color: white;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover contain; }
+  background-size: cover; }
   .masthead .intro-body {
     display: flex;
     margin-top: 3px;
     vertical-align: middle; }
     .masthead .intro-body .brand-heading {
-      font-size: 65px;
-      margin-top: -7px; }
+      font-size: 100px;
+      margin-left: 8px;
+      margin-top: 20px; }
     .masthead .intro-body .intro-text {
       font-size: 18px; }
   @media (min-width: 768px) {
     .masthead {
+      background-size: contain;
       height: 100%;
       padding: 0; }
       .masthead .intro-body .brand-heading {
         font-size: 100px;
+        margin-left: 8px;
         color: black;
         opacity: 1; }
       .masthead .intro-body .intro-text {
@@ -140,61 +151,100 @@ a {
         color: black;
         opacity: 0.7; } }
 
-.btn-circle-masthead {
-  font-size: 26px;
-  width: 55px;
-  height: 55px;
-  margin-top: 400px;
-  line-height: 38px;
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background 0.3s ease-in-out;
-  color: white;
-  border: 2px solid white;
-  border-radius: 100% !important;
-  background: transparent; }
-  .btn-circle-masthead:focus, .btn-circle-masthead:hover {
-    color: white;
-    outline: none;
-    background: rgba(255, 255, 255, 0.1); }
+.about-section {
+  background-color: black;
+  padding-top: 80px;
+  padding-bottom: 80px; }
+  .about-section h2 {
+    font-size: 60px;
+    text-align: left;
+    margin-bottom: 0px;
+    margin-left: 10px; }
+  .about-section h3 {
+    font-size: 40px;
+    text-align: left;
+    margin-top: 5px;
+    margin-left: 15px; }
+  .about-section p {
+    text-align: left;
+    margin-top: -30px;
+    margin-left: 15px; }
 
-.btn-circle-about {
-  font-size: 26px;
-  width: 55px;
-  height: 55px;
-  margin-top: 50px;
-  line-height: 38px;
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background 0.3s ease-in-out;
-  color: white;
-  border: 2px solid white;
-  border-radius: 100% !important;
-  background: transparent; }
-  .btn-circle-about:focus, .btn-circle-about:hover {
-    color: white;
-    outline: none;
-    background: rgba(255, 255, 255, 0.1); }
+.container-about {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+  margin-bottom: auto; }
 
-.content-section {
-  padding-top: 100px;
-  padding-bottom: 150px; }
+.about-story {
+  justify-content: center;
+  align-items: center;
+  margin-right: 50px;
+  padding-top: 50px;
+  padding-bottom: auto; }
+
+.about-photo-frame {
+  background-color: transparent;
+  background-position: center center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  opacity: 1;
+  height: 500px;
+  width: contain; }
+
+.photo {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .photo img {
+    height: 500px;
+    width: cover; }
+  .photo p {
+    text-align: center;
+    margin-top: -30px;
+    margin-left: 10px;
+    color: white; }
 
 .download-section {
   color: black;
+  display: flex;
   background: url("../img/pre_waza-main.jpg") no-repeat center center scroll;
-  background-color: black;
+  background-color: transparent;
+  padding-top: 100px;
+  padding-bottom: 100px;
   opacity: 1;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover contain; }
+  background-size: cover; }
+  .download-section h2 {
+    align-items: left;
+    text-align: left;
+    font-size: 60px;
+    margin-bottom: 30px;
+    padding-top: -10px;
+    margin-left: 0px; }
+  .download-section h3 {
+    text-align: left;
+    font-size: 40px;
+    margin-top: -30px;
+    margin-left: 0px; }
+  .download-section p {
+    text-align: center;
+    margin-top: 0px;
+    margin-left: 15px; }
+
+.btn-download {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .contact-section {
+  padding-top: 100px;
+  padding-bottom: 100px;
   color: black;
-  background: url("../img/events_main01.jpg") no-repeat center center scroll;
-  background-color: black;
-  opacity: 1;
+  background-color: white;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -231,8 +281,9 @@ a {
     background-color: none; }
 
 .btn-social {
-  color: white;
-  border: 1px solid white;
+  color: black;
+  border: 1px solid black;
+  margin-left: 5px;
   background-color: transparent; }
   .btn-social:focus, .btn-social:hover {
     color: red;
