--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -206,6 +206,50 @@ a {
     margin-left: 10px;
     color: white; }
 
+.special-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  background-color: yellow;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  height: auto; }
+  .special-section h2 {
+    align-items: left;
+    text-align: left;
+    font-size: 50px;
+    margin-bottom: 30px;
+    padding-top: -10px;
+    margin-left: 0px; }
+  .special-section h3 {
+    text-align: left;
+    font-size: 40px;
+    margin-top: -30px;
+    margin-left: 0px; }
+  .special-section p {
+    text-align: center;
+    margin-top: 0px;
+    margin-left: 15px; }
+
+.special-container {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent; }
+
+.special-item {
+  background-color: white;
+  background-size: cover;
+  height: 400px;
+  width: auto;
+  flex-basis: 220px;
+  margin: 10px;
+  margin-left: 40px; }
+
 .download-section {
   color: black;
   display: flex;
@@ -213,7 +257,6 @@ a {
   background-color: transparent;
   padding-top: 100px;
   padding-bottom: 100px;
-  opacity: 1;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
