--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -278,7 +278,7 @@ a {
 .product-section {
   display: flex;
   color: black;
-  background-color: white;
+  background-color: transparent;
   padding-top: 30px;
   padding-bottom: 30px;
   height:auto;
@@ -320,10 +320,9 @@ a {
 }
 
 .wrapper{
-  width: 300px;
+  width: 250px;
   height: 500px;
-  background: white;
-  border: black;
+  background: transparent;
   margin: auto;
   position: relative;
   overflow: hidden;
@@ -430,9 +429,6 @@ a {
   background-size: 100%;
     }
 
-
-
-
     .bottom{
       width: 200%;
       height: 20%;
@@ -440,15 +436,16 @@ a {
       &.clicked{
         transform: translateX(-50%);
       }
-      h1{
+      h1 {
           font-size: 20px;
           margin:0;
           padding:0;
       }
-      p{
+      p {
           font-size: 20px;
           margin:0;
           padding:0;
+
       }
       .left{
         height:100%;
@@ -457,7 +454,7 @@ a {
         position:relative;
         float:left;
         .details{
-          padding: 20px;
+          padding: 30px;
           float: left;
           width: calc(70% - 40px);
         }
@@ -511,7 +508,7 @@ a {
 
   .inside{
     z-index:9;
-    background: black;
+    background: gray;
     border-radius: white;
     width:140px;
     height:140px;
