--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -4,7 +4,9 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
  */
 body {
-  font-family: 'Playfair Display', serif;
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400;
   position: relative;
   width: 100%;
   height: 100%;
@@ -16,21 +18,24 @@ html {
   height: 100%; }
 
 h1 {
-  font-family: 'Playfair Display', serif;
-  font-weight: 700; }
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400; }
 
 
 h2 {
-  font-family: 'Playfair Display', serif;
-  font-weight: 700;
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400;
   margin: 0 0 35px;
   letter-spacing: 1px;
   text-transform: uppercase; }
 
 
 h3 {
-  font-family: 'Playfair Display', serif;
-  font-weight: 700;
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400;
   margin: 0 0 35px;
   letter-spacing: 1px;
   text-transform: uppercase; }
@@ -39,14 +44,17 @@ h3 {
 h4,
 h5,
 h6 {
-  font-family: 'Playfair Display', serif;
-  font-weight: 700;
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400;
   margin: 0 0 35px;
   letter-spacing: 1px;
   text-transform: uppercase; }
 
 p {
-  font-family: 'Playfair Display', serif;
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.5px;
@@ -67,7 +75,9 @@ a {
     color: #b1a698; }
 
 #mainNav {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: ltc-bodoni-175, serif;
+  font-style: normal;
+  font-weight: 400;
   margin-bottom: 10px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   background-color: white; }
@@ -129,25 +139,32 @@ a {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; }
+  background-size: contain;
+  height: 800px; }
   .masthead .intro-body {
     display: flex;
     margin-top: 3px;
     vertical-align: middle; }
     .masthead .intro-body .brand-heading {
       font-size: 100px;
+      font-style: normal;
+      font-weight: 300;
       border: white;
       margin-left: 8px;
       margin-top: 20px; }
     .masthead .intro-body .intro-text {
       font-size: 18px; }
-  @media (min-width: 992px) {
+  @media (max-width: 750px) {
     .masthead {
+      background: url("../img/stocks/MastHeadmini.jpg") no-repeat center center scroll;
       background-size: contain;
-      height: 100%;
+      -webkit-background-size: contain contain;
+      -moz-background-size: contain contain;
+      -o-background-size: contain contain;
+      height: 80%;
       padding: 0; }
       .masthead .intro-body .brand-heading {
-        font-size: 100px;
+        font-size: 0px;
         margin-left: 8px;
         color: black;
         opacity: 1; }
@@ -158,21 +175,26 @@ a {
 
 .about-section {
   background-color: black;
-  padding-top: 80px;
-  padding-bottom: 80px; }
+  padding-top: 60px;
+  padding-bottom: 60px; }
   .about-section h2 {
-    font-size: 60px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 30px;
     text-align: left;
     margin-bottom: 0px;
     margin-left: 10px; }
   .about-section h3 {
-    font-size: 40px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 35px;
     text-align: left;
     margin-top: 5px;
-    margin-left: 15px; }
+    margin-left: 10px; }
   .about-section p {
+    font-style: italic;
     text-align: left;
-    margin-top: -30px;
+    margin-top: -70px;
     margin-left: 15px; }
 
 .container-about {
@@ -219,13 +241,19 @@ a {
   padding-bottom: 30px;
   height: auto; }
   .product-section h2 {
+    font-family: ltc-bodoni-175, serif;
+    font-style: normal;
+    font-weight: 400;
     align-items: left;
     text-align: left;
-    font-size: 50px;
-    margin-bottom: 30px;
-    padding-top: 0px;
+    font-size: 30px;
+    margin-bottom: -30px;
+    margin-left: -30px;
+    padding-top: 20px;
     padding-left: 10px;
     margin-left: 0px; }
+    .product-section h2 .header {
+      color: red; }
   .product-section h3 {
     text-align: left;
     font-size: 40px;
@@ -268,6 +296,8 @@ a {
     width: 100%;
     height: 100%;
     margin: 0; }
+    .wrapper .container .header {
+      text-align: left; }
     .wrapper .container .top-chiyogiku {
       height: 80%;
       width: 100%;
@@ -287,10 +317,10 @@ a {
       -o-background-size: 100%;
       background-size: 100%;
       margin-bottom: -20px; }
-    .wrapper .container .top-chigononiwa {
+    .wrapper .container .top-chigonoiwa {
       height: 80%;
       width: 100%;
-      background: url("../img/stocks/yawara-chigononiwa.jpg") no-repeat center center;
+      background: url("../img/stocks/yawara-chigonoiwa.jpg") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -480,6 +510,9 @@ a {
     text-align: center;
     margin-top: 0px;
     margin-left: 15px; }
+  @media (max-width: 750px) {
+    .special-section h2 {
+      font-size: 45px; } }
 
 .special-container {
   align-items: center;
@@ -526,6 +559,9 @@ a {
     text-align: center;
     margin-top: 0px;
     margin-left: 15px; }
+  @media (max-width: 750px) {
+    .download-section h2 {
+      font-size: 45px; } }
 
 .btn-download {
   display: flex;
@@ -534,10 +570,10 @@ a {
   width: 300px; }
 
 .contact-section {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   color: white;
-  background-color: gray;
+  background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
