--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -6,7 +6,9 @@
 //ここから標準bootstrapの上書き。
 
 body {
-  font-family: 'Playfair Display', serif;
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400;
 
   position: relative;
 
@@ -23,12 +25,14 @@ html {
 }
 
 h1{
-  font-family: 'Playfair Display', serif;
-  font-weight: 700;
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400;
 },
 h2 {
-  font-family: 'Playfair Display', serif;
-  font-weight: 700;
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400;
 
   margin: 0 0 35px;
 
@@ -36,8 +40,9 @@ h2 {
   text-transform: uppercase;
 },
 h3 {
-  font-family: 'Playfair Display', serif;
-  font-weight: 700;
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400;
 
   margin: 0 0 35px;
 
@@ -47,8 +52,9 @@ h3 {
 h4,
 h5,
 h6 {
-  font-family: 'Playfair Display', serif;
-  font-weight: 700;
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400;
 
   margin: 0 0 35px;
 
@@ -57,7 +63,9 @@ h6 {
 }
 
 p {
-  font-family: 'Playfair Display', serif;
+  font-family: ltc-bodoni-175, serif;
+  font-style: italic;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.5px;
@@ -91,7 +99,9 @@ a {
 //メインナビゲーションバー
 
 #mainNav {
-  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: ltc-bodoni-175, serif;
+  font-style: normal;
+  font-weight: 400;
   margin-bottom: 10px;
   border-bottom: 1px solid fade-out(white, .7);
     background-color: opacify(white, 0.3);
@@ -170,7 +180,8 @@ a {
   -webkit-background-size: cover ;
   -moz-background-size: cover ;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: contain;
+  height:800px;
 
   .intro-body {
     display: flex;
@@ -179,6 +190,8 @@ a {
 
     .brand-heading {
       font-size: 100px;
+      font-style: normal;
+      font-weight: 300;
       border: white;
       margin-left: 8px;
       margin-top: 20px;
@@ -188,13 +201,17 @@ a {
 
     }
   }
-  @media(min-width:992px) {
+  @media(max-width:750px) {
+    background: url('../img/stocks/MastHeadmini.jpg') no-repeat center center scroll;
     background-size: contain;
-    height: 100%;
+    -webkit-background-size: contain contain ;
+    -moz-background-size: contain contain ;
+    -o-background-size: contain contain;
+    height: 80%;
     padding: 0;
     .intro-body {
       .brand-heading {
-        font-size: 100px;
+        font-size: 0px;
         margin-left: 8px;
         color:black;
         opacity: 1;
@@ -213,23 +230,28 @@ a {
 
 .about-section {
   background-color: black;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   h2 {
-    font-size: 60px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 30px;
     text-align: left;
     margin-bottom: 0px;
     margin-left: 10px;
   }
   h3 {
-    font-size: 40px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 35px;
     text-align: left;
     margin-top: 5px;
-    margin-left: 15px;
+    margin-left: 10px;
   }
   p {
+    font-style: italic;
     text-align: left;
-    margin-top: -30px;
+    margin-top: -70px;
     margin-left: 15px;
   }
 }
@@ -286,13 +308,20 @@ a {
   padding-bottom: 30px;
   height:auto;
   h2 {
+    font-family: ltc-bodoni-175, serif;
+    font-style: normal;
+    font-weight: 400;
     align-items: left;
     text-align: left;
-    font-size: 50px;
-    margin-bottom: 30px;
-    padding-top:  0px;
+    font-size: 30px;
+    margin-bottom: -30px;
+    margin-left: -30px;
+    padding-top:  20px;
     padding-left: 10px;
     margin-left: 0px;
+    .header {
+      color:red;
+    }
   }
   h3 {
     text-align: left;
@@ -343,6 +372,9 @@ a {
     width:100%;
     height:100%;
     margin: 0;
+    .header {
+      text-align: left;
+    }
 
     .top-chiyogiku {
       height: 80%;
@@ -365,10 +397,10 @@ a {
       background-size: 100%;
       margin-bottom: -20px;
     }
-    .top-chigononiwa {
+    .top-chigonoiwa {
       height: 80%;
       width:100%;
-      background: url("../img/stocks/yawara-chigononiwa.jpg") no-repeat center center;
+      background: url("../img/stocks/yawara-chigonoiwa.jpg") no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -599,6 +631,11 @@ a {
     margin-top: 0px;
     margin-left: 15px;
   }
+  @media(max-width:750px) {
+    h2 {
+      font-size: 45px;
+    }
+  }
 }
 .special-container {
   align-items: center;
@@ -652,8 +689,12 @@ a {
     margin-top: 0px;
     margin-left: 15px;
   }
+  @media(max-width:750px) {
+    h2 {
+      font-size: 45px;
+    }
+  }
 }
-
 .btn-download {
   display: flex;
   justify-content: center;
@@ -664,10 +705,10 @@ a {
 //ここからcontactセクション
 
 .contact-section {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   color: white;
-  background-color: gray;
+  background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
