--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -175,7 +175,7 @@ a {
 
   color: black;
 
-  background: url('../img/MastHead.jpg') no-repeat center center scroll;
+  background: url('../img/MastHead.png') no-repeat center center scroll;
   background-color: white;
   -webkit-background-size: cover ;
   -moz-background-size: cover ;
@@ -270,6 +270,7 @@ a {
   margin-right: 50px;
   padding-top: 50px;
   padding-bottom: auto;
+  margin-top: 20px;
 }
 
 .about-photo-frame {
@@ -280,6 +281,8 @@ a {
   opacity: 1;
   height: 500px;
   width: contain;
+  border-radius: 10px;
+  padding-top: 50px;
 }
 
 .photo {
@@ -287,8 +290,9 @@ a {
   justify-content: center;
   align-items: center;
   img {
-    height:500px;
-    width: cover;
+    height:400px;
+    width: 280px;
+
   }
   p {
     text-align: center;
@@ -298,6 +302,20 @@ a {
   }
 }
 
+.founder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  p {
+    text-align: center;
+    font-size: 15px;
+    font-style: normal;
+    margin:0;
+    margin-top: -5px;
+    padding-top:5px;
+    padding-bottom:0px;
+  }
+}
 //ここからproductセクション
 
 .product-section {
@@ -319,9 +337,6 @@ a {
     padding-top:  20px;
     padding-left: 10px;
     margin-left: 0px;
-    .header {
-      color:red;
-    }
   }
   h3 {
     text-align: left;
@@ -604,20 +619,22 @@ a {
 
 .special-section {
   display: flex;
-  justify-content: center;
-  align-items: center;
   color: white;
   background-color: black;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   height:auto;
   h2 {
+    font-family: ltc-bodoni-175, serif;
+    font-style: normal;
+    font-weight: 400;
     align-items: left;
     text-align: left;
-    font-size: 50px;
-    margin-bottom: 30px;
-    padding-top: -10px;
-    padding-top: 10px;
+    font-size: 30px;
+    margin-bottom: -30px;
+    margin-left: -30px;
+    padding-top:  20px;
+    padding-left: 10px;
     margin-left: 0px;
   }
   h3 {
@@ -631,51 +648,226 @@ a {
     margin-top: 0px;
     margin-left: 15px;
   }
-  @media(max-width:750px) {
-    h2 {
-      font-size: 45px;
-    }
-  }
 }
 .special-container {
-  align-items: center;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  background-color: transparent;
   justify-content: center;
   align-items: center;
-  background-color: transparent;
+  align-content: center;
+  height: 100%;
+  width: 100%;
+  margin-top: 70px;
+  margin-bottom: 20px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .special-item {
-  background-color: white;
-  background-size: cover;
-  height:400px;
-  width:auto;
-  flex-basis: 220px;
-  margin: 10px;
-  margin-left: 40px;
-
+  width: 300px;
+  height: 500px;
+  background: white;
+  margin: auto;
+  padding: 0;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 0;
+  transform: scale(0.95);
+  transition: box-shadow 0.5s, transform 0.5s;
+  border: 0.5px solid #ddd9d4;
+  &:hover{
+    transform: scale(1);
+    box-shadow: 5px 20px 30px rgba(0,0,0,0.2);
+  }
+  h2 {
+    text-align: center;
+    font-size: 18px;
+    margin:0;
+    margin-top: -5px;
+    padding-top:5px;
+    padding-bottom:0px;
+  }
+  h1 {
+    color:black;
+    font-style: normal;
+    text-align: center;
+    font-size: 25px;
+    margin-left: 5px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top:12px;
+    padding-bottom:0px;
+  }
+  p {
+    color: black;
+    text-align: left;
+    font-size: 15px;
+    margin-left: 5px;
+    margin-top: 5px;
+    padding-top:0px;
+    padding-bottom:0px;
+  }
+  .container {
+    width:100%;
+    height:100%;
+    margin: 0;
+    .header {
+      text-align: left;
+    }
+    .top {
+      height: 15%;
+      width:100%;
+      background-color: transparent;
+      margin-bottom: 5px;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: 100%;
+      margin-top: 8px;
+      border-bottom: 0.5px solid #ddd9d4;
+      border-top: 0.5px solid #ddd9d4;
+      p {
+        color: black;
+        text-align: center;
+        font-style: normal;
+        font-size: 15px;
+        margin-top: 0px;
+        padding-top:0px;
+        padding-bottom:0px;
+      }
+    }
+    .body-okome {
+      height: 65%;
+      width:100%;
+      background: url("../img/okome.jpg")no-repeat center center scroll;
+      background-color: transparent;
+      border-radius: 10px;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: cover;
+      margin: 0;
+    }
+    .body-meisui {
+      height: 65%;
+      width:100%;
+      background: url("../img/meisui.jpg")no-repeat center center scroll;
+      background-color: transparent;
+      border-radius: 10px;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: cover;
+      margin: 0;
+    }
+    .body-kuramoto {
+      height: 65%;
+      width:100%;
+      background: url("../img/kuramoto.jpg")no-repeat center center scroll;
+      background-color: transparent;
+      border-radius: 10px;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: cover;
+      margin: 0;
+    }
+    .body-design {
+      height: 65%;
+      width:100%;
+      background: url("../img/design.jpg")no-repeat center center scroll;
+      background-color: transparent;
+      border-radius: 10px;
+      -webkit-background-size: 100%;
+      -moz-background-size: 100%;
+      -o-background-size: 100%;
+      background-size: contain;
+      margin: 0;
+    }
+    .photo {
+      width: 30%;
+      height: 30%;
+      .icon {
+        position:absolute;
+        right:130px;
+        top:240px;
+        color:black;
+        opacity: 1;
+        a:visited {
+          color: white;
+        }
+      }
+    }
+    .bottom {
+      height: 10%;
+      width:100%;
+      background-color: transparent;
+      margin-top: 0px;
+      margin-bottom: -5px;
+      p {
+        color: black;
+        text-align: left;
+        line-height: 95%;
+        font-size: 13px;
+        margin-left: 5px;
+        margin-top: 10px;
+        margin-bottom: 0px;
+        padding-top:0px;
+        padding-bottom:0px;
+        }
+      }
+    .footer {
+    height: 5%;
+    width:100%;
+    background-color: transparent;
+    margin-top: -10px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    border-top: 0.5px solid #ddd9d4;
+    p {
+      color: black;
+      text-align: center;
+      font-size: 12px;
+      margin-left: 5px;
+      margin-top: 10px;
+      padding-top:0px;
+      margin-bottom: 0px;
+      padding-bottom:5px;
+      }
+    }
+  }
 }
 //ここからdownloadセクション
+
 
 .download-section {
   color: black;
   display: flex;
   background: url('../img/pre_waza-main.jpg') no-repeat center center scroll;
   background-color: transparent;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  height: auto;
+  margin-bottom: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+
   h2 {
+    font-family: ltc-bodoni-175, serif;
+    font-style: normal;
+    font-weight: 400;
     align-items: left;
     text-align: left;
-    font-size: 60px;
-    margin-bottom: 30px;
-    padding-top: -10px;
+    font-size: 30px;
+    margin-bottom: -30px;
+    margin-left: -30px;
+    padding-top:  20px;
+    padding-left: 10px;
     margin-left: 0px;
   }
   h3 {
@@ -688,6 +880,29 @@ a {
     text-align: center;
     margin-top: 0px;
     margin-left: 15px;
+  }
+  .message {
+    margin-top: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  .pdf-image-frame {
+    background-color: transparent;
+    background-position: center center;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    opacity: 1;
+    height: 500px;
+    width: contain;
+  }
+  .pdf-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+      height:500px;
+      width: cover;
+    }
   }
   @media(max-width:750px) {
     h2 {
@@ -700,6 +915,8 @@ a {
   justify-content: center;
   align-items: center;
   width: 300px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 //ここからcontactセクション
