--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -290,8 +290,10 @@ a {
   justify-content: center;
   align-items: center;
   img {
-    height:400px;
-    width: 280px;
+    height:380px;
+    width: 300px;
+    border-radius: 10px;
+    border: solid 0.7px gray;
 
   }
   p {
@@ -311,8 +313,24 @@ a {
     font-size: 15px;
     font-style: normal;
     margin:0;
-    margin-top: -5px;
+    margin-top: 10px;
     padding-top:5px;
+    padding-bottom:0px;
+  }
+}
+
+
+.profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  p {
+    text-align: center;
+    font-size: 10px;
+    font-style: normal;
+    margin:0;
+    margin-top: 0px;
+    padding-top:0px;
     padding-bottom:0px;
   }
 }
@@ -820,10 +838,10 @@ a {
         padding-bottom:0px;
       }
     }
-    .body-okome {
+    .body-meisui {
       height: 65%;
       width:100%;
-      background: url("../img/okome.jpg")no-repeat center center scroll;
+      // background: url("../img/meisui.jpg")no-repeat center center scroll;
       opacity: 0.9;
       background-color: transparent;
       border-radius: 10px;
@@ -833,10 +851,10 @@ a {
       background-size: cover;
       margin: 0;
     }
-    .body-meisui {
+    .body-okome {
       height: 65%;
       width:100%;
-      background: url("../img/meisui.jpg")no-repeat center center scroll;
+      background: url("../img/okome.jpg")no-repeat center center scroll;
       opacity: 0.9;
       background-color: transparent;
       border-radius: 10px;
